1.2.2 (2019-04-03)
------------------

- add mercator min/max zoom info in metadata output from rio_tiler.utils.raster_get_stats (#96)
- add band description (band name) in metadata output from rio_tiler.utils.raster_get_stats (#96)

1.2.1 (2019-03-26)
------------------

- Replace rio-pansharpen dependency with a fork of the brovey function directly
into `rio_tiler.utils` (rio-pansharpen is unmaintened and not compatible with 
rasterio>=1) (#94).


1.2.0 (2019-03-26)
------------------

- `rio_tiler.utils.array_to_image`'s color_map arg can be a dictionary of discrete values (#91)

Breacking Changes:

- `expr` argument is now a required option in `rio_tiler.utils.expression`. (#88)

1.1.4 (2019-03-11)
------------------
- Add 'rplumbo' colormap (#90 by @DanSchoppe)

1.1.3 (2019-03-06)
------------------

Bug fixes:

- Fix casting to integer for MAX_THREADS environment variable.

1.1.1 (2019-02-21)
------------------
- Minor typo correction and harmonization of the use of src/src_dst/src_path in `rio_tiler.utils`

Bug fixes:

- Fix nodata handling in `utils.raster_get_stats`

1.1.0 (2019-02-15)
------------------

- Allow options forwarding to `tile_read` from `main.tile` function (#86)
- Add `resampling_method` options in `rio_tiler.utils.tile_read` to allow user set
resampling. Default is now bilinear (#85)

Bug fixes:

- Fix nodata option forwarding to tile_read when source is a path (#83)

Refactoring:

- Refactor `rio_tiler.utils.tile_read` to reduce code complexity (#84)

Breacking Changes:

- `indexes` options is now set to **None** in `rio_tiler.utils.tile_read`.
Default will now be the dataset indexes.

1.0.1 (2019-02-14)
------------------
- Fix mask datatype bug in `rio_tiler.utils.array_to_image`(#79)
- Fix nodata handling and better test for the nodata/mask main module (#81)

1.0.0 (2019-02-11)
------------------
- add missing Landsat panchromatic band (08) min/max fetch in `rio_tiler.landsat8.metadata` (#58)